--- a/templates/views/list_image.html
+++ b/templates/views/list_image.html
@@ -3,7 +3,7 @@
 
 <style type="text/css">
   .card:hover{
-    background: rgb(56 60 203 / 80%);
+    background: rgba(96, 99, 211, 0.8);
     opacity: 0.5;
   }
 </style>
@@ -20,8 +20,9 @@
       <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
       <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
         <!-- Button trigger modal -->
-      <button type="button" class="list-group-item list-group-item-action" data-toggle="modal"
-        data-target="#exampleModal">
+      <button type="button" class="list-group-item 
+      list-group-item-action" data-toggle="modal"
+        data-target="#modalAddImage">
 
          Add new image
       </button>
@@ -32,16 +33,6 @@
   <div class="col-8 ml-2">
     <div class="row">
       <div class="card col-md-6 col-lg-4 hover-overlay bg-img" style="height: 320px;">
-        <div
-        class="mask"
-        style="
-          background: linear-gradient(
-            45deg,
-            rgba(29, 236, 197, 0.5),
-            rgba(91, 14, 214, 0.5) 100%
-          );
-        "
-      ></div>
         <input class="form-check-input" class="row mr-1" type="checkbox" name="anh3"
          id="flexRadioDefault1" style="margin-left: -10px;transform: scale(1.5);">
         <img src="..." class="card-img-top" height="215px" alt="...">
@@ -53,42 +44,37 @@
     </div>
   </div>
 </div>
-<div class="container-fluid row" style="min-height:700px;">
-  
-  <div class="col-9 ">
-    <div class="row">
-         
-          
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" 
-          aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <input type="file" id = "input_file_upload" name="" onchange="getBase64(this);" accept="image/*">
-                  <img id="file-upload-image" height="100px" width="100px" style="display:none" src="https://cdn.onlinewebfonts.com/svg/img_510738.png" alt="your image"/>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" 
-                  id="input_submit_file"
-                  class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
-            </div>
-          </div>
 
+<!-- Modal -->
+<div class="modal fade" id="modalAddImage" tabindex="-1" role="dialog" 
+aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <input type="file" id = "input_file_upload" name="" onchange="getBase64(this);" accept="image/*">
+        <img id="file-upload-image" height="100px" width="100px" style="display:none" src="https://cdn.onlinewebfonts.com/svg/img_510738.png" alt="your image"/>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary"
+        id="input_close_file"
+         data-dismiss="modal">Close</button>
+        <button type="button" 
+        id="input_submit_file"
+        class="btn btn-primary">Save changes</button>
+      </div>
     </div>
-
   </div>
-
 </div>
+
+
+
+
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
 
@@ -133,9 +119,16 @@ $("#input_submit_file").click(function(){
     url: url_file_upload,
     type: 'POST',
     data: JSON.stringify(data),
-    success: function (data, status) {
+    success: function (res, status) {
         console.log('done');
-        console.log(data);
+        var data=JSON.parse(res)
+        var success = data['success']
+        document.getElementById("input_close_file").click()
+        if(success==true){
+          alert('Upload thanh cong')
+        }else{
+          alert('Upload that bai')
+        }
     },
     error: function (xhr, desc, err) {
       console.log(xhr);
