--- a/templates/decorators/login.html
+++ b/templates/decorators/login.html
@@ -33,9 +33,6 @@
 							
 		<div class="white-panel">
 			<div class="login-show">
-				<div class="alert alert-danger" role="alert">
-				${alertMsg }</div>
-
                 <div class="form-group">
 					<h2>LOGIN</h2>
 					<input type="text" name="input_username" id="input_username_login"
@@ -135,6 +132,9 @@ $("#input_submit_login").click(function()
 					 var res=JSON.parse(data)
 					 if(res['success']){
 						window.location.href = urlHome;
+					 }
+					 else{
+						 alert('Nhập sai tài khoản hoặc mật khẩu!')
 					 }
 				  },
 				  error: function (xhr, desc, err) {
