--- a/templates/views/list_image.html
+++ b/templates/views/list_image.html
@@ -9,46 +9,38 @@
 </style>
 
 <div class="row container-fluid" style="min-height:700px; width:100%;margin-top:60px;">
-  <div class="col-3">
-    <div class="list-group" style="border-radius: 30px;position:fixed;">
-      <button type="button" class="list-group-item list-group-item-action active">
-        Cras justo odio
+  <div class="col-3 ">
+    <div id="container-sidebar" class="list-group shadow p-1" style="width: 20%;position:fixed;" >
+      <button type="button" class="list-group-item list-group-item-action" id="btn-myPicShow">
+        <i class="fa fa-picture-o"></i>
+        My Picture
       </button>
-      <button type="button" class="list-group-item 
-      list-group-item-action">Dapibus ac facilisis in</button>
-      <button type="button" class="list-group-item list-group-item-action">Morbi leo risus</button>
       <button type="button" class="list-group-item list-group-item-action" id="btn-shareToMe">
+        <i class="fa fa-share-square-o"></i>
         Share To Me
       </button>
-      <button type="button" class="list-group-item list-group-item-action" id="btn-reset-show">
-        My Picture
+      <button type="button" class="list-group-item list-group-item-action"
+      id="btn-selectAll">
+      <i class="fa fa-check-square-o"></i>
+       Select All
       </button>
         <!-- Button trigger modal -->
       <button type="button" class="list-group-item 
       list-group-item-action" data-toggle="modal"
         data-target="#modalAddImage">
+        <i class="fa fa-plus-square"></i>
          Add new image
+      </button>
+      <button type="button" class="list-group-item list-group-item-action"
+       id="btn-saveImage">
+       <i class="fa fa-download"></i>
+        Save
       </button>
     </div>
   </div>
 
   <div class="col-8 ml-2" >
     <div class="row" id="container-show-card">
-      <div class="col-md-6 col-lg-4">
-        <div class="card  hover-overlay bg-img" style="height: 320px;">
-          <input class="form-check-input" class="row mr-1" type="checkbox" name="anh3"
-          id="flexRadioDefault1" style="margin-left: 3px;transform: scale(1.5);">
-          <img src="..." class="card-img-top" height="215px" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Hieu</h5>
-            <!-- list-group-item list-group-item-action -->
-            <button type="button" class="btn btn-primary" data-toggle="modal"
-              data-target="#modalDetailImage">
-                Detail
-            </button>
-          </div>
-        </div> 
-      </div>
     </div>
   </div>
 </div>
@@ -86,7 +78,7 @@ aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Detail</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Share To</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -136,7 +128,17 @@ aria-labelledby="exampleModalLabel" aria-hidden="true">
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
+let con_sideBar= document.getElementById('container-sidebar')
+function activeBtnSideBar(btn){
+  list_btn = con_sideBar.getElementsByClassName('list-group-item')
+  for(var i of list_btn){
+    i.classList.remove('active')
+    //i.classList.replace('active','')
+  }
+  btn.classList.add('active')
+}
 
+// script upload image
 var url_file_upload = "{{url_for('upload_img')}}"
 var file_upload = document.getElementById('input_file_upload')
 var img_show = document.getElementById('file-upload-image')
@@ -154,8 +156,6 @@ function getBase64(input) {
     reader.onerror = error => reject(error);
   });
 }
-
-
 $("#input_submit_file").click(function(){
   var len = file_upload.files.length
   if(len==0) {
@@ -198,11 +198,10 @@ $("#input_submit_file").click(function(){
   });
 })
 
+
+//script show list card image
 const urlMyPictureListID= "{{url_for('getPictures')}}"
-
-
-
-function getMyPictureList(url){
+function getMyPictureList(url,permission){
     clear_show()
     $.ajax({
       url: url,
@@ -212,7 +211,8 @@ function getMyPictureList(url){
           console.log('done');
           var data=JSON.parse(res)
           for (var pic_id of data['picture_ids']){
-            getImageDetail(pic_id['picture_id'])
+            var detail = getImageDetail(pic_id['picture_id'])
+            showCardImage(detail,permission)
           }
       },
       error: function (xhr, desc, err) {
@@ -221,27 +221,28 @@ function getMyPictureList(url){
       },
     });
 }
-const urlMyPictureDetail= "{{url_for('searchPicture',picture_id=0)}}"
-//default id =0 to ez replace
+const urlMyPictureDetail= "{{url_for('searchPicture',picture_id=0)}}" //default id =0 to ez replace
 function getImageDetail(picture_id){
+  var detail
   $.ajax({
     url: urlMyPictureDetail.replace('0',picture_id),
-    async:true,
+    async:false,
     type: 'GET',
     success: function (res, status) {
         console.log('done');
-        var data=JSON.parse(res)
-        showCardImage(data)
+        data=JSON.parse(res)
+        detail=data
     },
     error: function (xhr, desc, err) {
       console.log(xhr);
       console.log("Desc: " + desc + "\nErr:" + err);
     },
   });
+  return detail
 }
 
 let contShow= document.getElementById('container-show-card')
-function showCardImage(data){
+function showCardImage(data,permission){
   create_at= data['create_at']
   fullname= data['fullname']
   pic= data['pic']
@@ -249,25 +250,36 @@ function showCardImage(data){
   userlogin_id= data['userlogin_id']
   username= data['username']
   let div = document.createElement('div')
-  div.setAttribute('class','col-md-6 col-lg-4 mb-3')
+  div.setAttribute('class','col-md-6 col-lg-4 mb-4')
+
+  var btn =   (permission)?`<button type="button" class="btn btn-primary" 
+  data-toggle="modal" data-target="#modalDetailImage"
+  onclick="fillModalShareFor(`+picture_id+`)">
+  <i class="fa fa-share-square-o"></i>
+    Share
+</button>`:`` 
   div.innerHTML=`
     <div class="card  hover-overlay bg-img" 
     id="card`+picture_id+`"
-    style="height: 320px; radius">
-      <input class="form-check-input"
+    style="height: 360px; radius">
+      <input class="form-check-input card_check"
       id="check_card`+picture_id+`" onclick="check_click(`+picture_id+`)"
-      class="row card_check" type="checkbox" name="`+picture_id+`"
+      type="checkbox" name="`+picture_id+`"
       id="flexRadioDefault1" style="margin-left: 3px;transform: scale(1.5);">
       <img src="`+pic+`" class="card-img-top" id="img_card`+picture_id+`" 
         height="215px" alt="...">
       <div class="card-body">
-        <h5 class="card-title">`+fullname+`</h5>
+        <h5 class="card-title" style="display:block;">`+username+`</h5>
+        <h6 class="card-text mb-3" style="opacity: 0.8;">`+create_at+`</h6>
+
         <!-- list-group-item list-group-item-action -->
-        <button type="button" class="btn btn-primary" 
-          data-toggle="modal" data-target="#modalDetailImage"
-          onclick="fillModalShareFor(`+picture_id+`)">
-            Share
-        </button>
+        `+ btn + `
+        <a href="`+pic+`" class="btn btn-primary"
+         id="btn_save`+picture_id+`"
+         download="picture`+picture_id+`.png" >
+         <i class="fa fa-download"></i>
+
+         Save</a>
       </div>
     </div> 
   `
@@ -289,15 +301,19 @@ function check_click(pic_id){
 function clear_show(){
   contShow.innerHTML=""
 }
-
 const urlShareToMe = "{{url_for('getPictureShared')}}"
-
-let btn_reset= document.getElementById('btn-reset-show')
-btn_reset.onclick= function(){
-  getMyPictureList(urlMyPictureListID)
-  getMyPictureList(urlShareToMe)
+let btn_myPic= document.getElementById('btn-myPicShow')
+btn_myPic.onclick= function(){
+  contShow.innerHTML=""
+  getMyPictureList(urlMyPictureListID,true)
+  activeBtnSideBar(btn_myPic)
 }
-
+btn_myPic.click()
+document.getElementById('btn-shareToMe').onclick= function(){
+  contShow.innerHTML=""
+  getMyPictureList(urlShareToMe,false)
+  activeBtnSideBar(document.getElementById('btn-shareToMe'))
+}
 const urlShareFor= "{{url_for('listShareFor',picture_id=0)}}"
 function getShareFor(pic_id){
   var data = null
@@ -318,9 +334,10 @@ function getShareFor(pic_id){
   });
   return data
 }
+
+// show modal share----------------------------
 let input_picShare= document.getElementById('input_picShare')
 function fillModalShareFor(pic_id){
-    var data= getShareFor(pic_id)
     input_picShare.value=pic_id
     loadUserShare(pic_id)
     input_user_shareTo.value=""
@@ -329,6 +346,30 @@ function fillModalShareFor(pic_id){
 let input_user_shareTo= document.getElementById('input_user_shareTo')
 const urlshareTo= "{{url_for('shareTo')}}"
 let alertShare = document.getElementById('alert_share')
+function deleteShareTo(username){
+  map={
+    "username": username,
+    "picture_id":input_picShare.value,
+  }
+  $.ajax({
+    url: urlshareTo,
+    async:false,
+    data:JSON.stringify(map),
+    type: 'Delete',
+    success: function (res, status) {
+        console.log('done');
+        var data=JSON.parse(res)
+        if(data['success'])
+          document.getElementById("share_"+username).remove()
+        else
+          alert('Xoa that bai')
+    },
+    error: function (xhr, desc, err) {
+      console.log(xhr)
+      console.log("Desc: " + desc + "\nErr:" + err)
+    },
+  });
+}
 document.getElementById('input_submit_share').onclick= function(){
   var user = input_user_shareTo.value.trim()
   map={
@@ -383,7 +424,6 @@ function loadUserShare(pic_id){
             var detail = getDetailUser(u['userlogin_id'])
             appendShowShareUser(detail)
           }
-
         }
     },
     error: function (xhr, desc, err) {
@@ -415,10 +455,53 @@ function getDetailUser(user_id){
 function appendShowShareUser(data){
   var user = data['username']
   var li = document.createElement('li')
+  li.id="share_"+user
   li.classList.add('list-group-item')
-  li.innerText=user
+  li.innerHTML=user+`
+  <button type="button" class="close" aria-label="Close"
+  onclick="deleteShareTo('`+user+`')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  `
   showListUserShare.appendChild(li)
 }
+
+// save image
+document.getElementById('btn-saveImage').onclick=function(){
+  list_card= document.getElementsByClassName('card_check')
+  var selected=false
+  for (var card of list_card){
+     if(card.checked){
+       id = card.name.trim()
+       document.getElementById('btn_save'+id).click()
+       card.click()
+       selectAll=true
+       selected=true
+     }
+  }
+  if(!selected) alert('Hãy chọn ảnh')
+}
+
+// select all 
+var selectAll= true
+document.getElementById('btn-selectAll').onclick=function(){
+  list_card= document.getElementsByClassName('card_check')
+  for (var card of list_card){
+    if(selectAll){
+      if(!card.checked){
+        card.click()
+      }
+    }
+    else{
+      if(card.checked){
+        card.click()
+      }
+    }
+  }
+  selectAll=!selectAll
+}
+
+
 
 </script>
 {% endblock %}
