--- a/templates/views/list_image.html
+++ b/templates/views/list_image.html
@@ -186,6 +186,7 @@ $("#input_submit_file").click(function(){
         document.getElementById("input_close_file").click()
         if(success==true){
           alert('Upload thanh cong')
+          btn_myPic.click()
         }else{
           alert('Upload that bai')
         }
