--- a/templates/commons/header.html
+++ b/templates/commons/header.html
@@ -2,7 +2,7 @@
   <div class="header-blue">
       <nav class="navbar navbar-light navbar-expand-md navigation-clean-search fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand col-3" href="#"><strong>PROJECT</strong> </a>
+            <a class="navbar-brand col-3" href="{{url_for('home')}}"><strong>PROJECT</strong> </a>
               <div style="float:right">
                 <!-- <a class="btn btn-light action-button mr-auto" style="float:right;" 
                 role="button" href="{{url_for('logout')}}">LOGOUT</a> -->
